# pytest-modified-env

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
pytest_modified_env/: plugin.py
tests/: test_env_modifications.py
