[tool.poetry]
name = "pytest-modified-env"
description = "Pytest plugin to fail a test if it leaves modified `os.environ` afterwards."
version = "0.2.0"
license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/pytest-modified-env"

keywords = [
  "pytest",
  "pytest-plugin",
  "os.environ",
  "testing",
  "unittest",
  "tests",
  "test",
  "unit tests",
  "code quality",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/wemake-services"

[tool.poetry.plugins.pytest11]
pytest_modified_env = "pytest_modified_env.plugin"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
mypy = "^1.10"

wemake-python-styleguide = "^0.19"
flake8-pytest-style = "^2.0"
nitpick = ">=0.35,<0.37"

pytest = "^8.2"
pytest-randomly = ">=3.15,<5.0"


[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.19.2/styles/nitpick-style-wemake.toml"
